# GAAI03

./: .gitignore  MEMO.md  README.md  setup.cfg
codex_cli/: __init__.py  commands.py  executor_plugin.py  planner.py  slack_plugin.py
docs/: API-specification.md  future-improvements.md  security-design.md  slack-settings.md  specification.md  task-execution-flow-design.md
prompts/: manager.md  planner.md
