[metadata]
name = openai-codex-cli
version = 0.1.0
description = OpenAI CLI Codex plugin
long_description = file: README.md
long_description_content_type = text/markdown
author = 
license = MIT

[options]
packages = find:
install_requires =
    openai>=0.27.0
    slack-bolt>=1.0.0
    docker>=5.0.0
    click>=8.0.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    codex=codex_cli.commands:codex